# DevBin

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.backend.yml  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-images.yml  build-prod-images.yml  docker-build.yml  lint-backend.yml  test-backend.yml
.taskfiles/: db.yml  dev.yml  prod.yml  test.yml
backend/: .coverage  .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  TESTING.md  Taskfile.yml  alembic.docker.ini  alembic.ini  docker-compose.test.yml  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 08393764144d_add_delete_edit_tokens_and_deleted_at.py  20251219_203917_hash_existing_tokens.py  4e57d32ab2ac_add_paste_indexes.py  6c5a2c764fb8_add_compression_fields.py  7c45e2617d61_updated_created_at_and_expires_at_types.py  9e8ceaeba260_initial_migration.py
backend/app/: config.py  containers.py  exceptions.py  ratelimit.py
backend/app/api/: middlewares.py  routes.py
backend/app/api/dto/: paste_dto.py  user_meta_data.py
backend/app/api/subroutes/: pastes.py  well-known.py
backend/app/db/: models.py
backend/app/dependencies/: db.py
backend/app/locks/: __init__.py  distributed_lock.py  file_lock.py  redis_lock.py
backend/app/services/: __init__.py  cleanup_service.py  health_service.py  paste_service.py
backend/app/storage/: __init__.py  local_storage.py  minio_storage.py  s3_storage.py  storage_client.py
backend/app/utils/: LRUMemoryCache.py  active_pastes_counter.py  compression.py  ip.py  logging.py  metrics.py  token_utils.py
backend/scripts/: setup_test_db.sh
backend/tests/: conftest.py  constants.py  factories.py  helpers.py  pytest_configure.py
backend/tests/api/: conftest.py  test_cache_invalidation.py  test_metrics_and_health.py  test_paste_routes.py
backend/tests/integration/: test_paste_service.py
backend/tests/performance/: test_compression_performance.py
backend/tests/security/: test_authorization.py  test_injection.py  test_xss.py
backend/tests/unit/: test_active_pastes_counter.py  test_cleanup_service.py  test_compression.py  test_config_validation.py  test_distributed_locks.py  test_exceptions.py  test_health_service.py  test_ip_utils.py  test_logging.py  test_lru_cache.py  test_metrics.py  test_ratelimit.py  test_storage_abstraction.py  test_token_utils.py
docs/: configuration.md  deployment.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/lib/: editor-lang.ts  editor-theme.ts  generateRandomText.ts  types.ts
frontend/src/lib/api/: index.ts
frontend/src/lib/components/: code-editor.svelte
frontend/src/lib/components/og/: paste-preview.svelte
frontend/src/lib/icons/: copy.svelte  delete.svelte  edit.svelte
frontend/src/lib/utils/: date.ts  ip.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
frontend/src/routes/[id]/: +page.server.ts  +page.svelte
frontend/src/routes/paste/[id]/: +page.server.ts  +page.svelte  +page.ts  words.ts
frontend/src/routes/paste/[id]/preview.png/: +server.ts
