[project]
name = "backend"
version = "0.0.1"
keywords = ["Pastebin", "Simplistic"]
urls = { github = "https://github.com/TheDeveloperDen/DevBin" }
description = "DevBins backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124",
    "uvicorn[standard]>=0.30",
    "dependency-injector>=4.41",
    "SQLAlchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.12.0",
    "uuid>=1.30",
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "slowapi>=0.1.9",
    "orjson>=3.11.5",
    "aiocache>=0.12.3",
    "fastapi-cors>=0.0.6",
    "argon2-cffi>=23.1.0",
]
[project.optional-dependencies]
migrations = [
    "psycopg2-binary",
]
dev = [
    "ruff>=0.14.9",
]

[tool.uvicorn]
factory = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["."], include = ["app*", "files*", "alembic*"] }
