[project]
name = "backend"
version = "0.0.1"
keywords = ["Pastebin", "Simplistic"]
urls = { github = "https://github.com/TheDeveloperDen/DevBin" }
description = "DevBins backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124",
    "uvicorn[standard]>=0.30",
    "dependency-injector>=4.41",
    "SQLAlchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.12.0",
    "uuid>=1.30",
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "slowapi>=0.1.9",
    "orjson>=3.11.5",
    "aiocache>=0.12.3",
    "fastapi-cors>=0.0.6",
    "argon2-cffi>=23.1.0",
]
[project.optional-dependencies]
migrations = [
    "psycopg2-binary",
]
storage = [
    "aioboto3>=12.0.0",  # For S3/MinIO storage backends
]
redis = [
    "redis>=5.0.0",  # For Redis cache and distributed locking
    "aiocache[redis]>=0.12.3",  # For Redis cache backend
]
logging = [
    "structlog>=23.1.0",  # For structured JSON logging
]
metrics = [
    "prometheus-client>=0.17.0",  # For Prometheus metrics and monitoring
]
dev = [
    "ruff>=0.14.9",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.5.0",
    "coverage[toml]>=7.4.0",
]

[tool.uvicorn]
factory = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["."], include = ["app*", "files*", "alembic*"] }

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
