[project]
name = "backend"
version = "0.0.1"
description = "DevBins backend"
keywords = ["Pastebin", "Simplistic"]
requires-python = ">=3.13"
urls = { github = "https://github.com/TheDeveloperDen/DevBin" }
dependencies = [
    "fastapi>=0.124",
    "uvicorn[standard]>=0.30",
    "dependency-injector>=4.41",
    "SQLAlchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "uuid>=1.30",
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "slowapi>=0.1.9",
    "orjson>=3.11.5",
    "aiocache>=0.12.3",
    "fastapi-cors>=0.0.6",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
migrations = ["psycopg2-binary"]
storage = ["aioboto3>=12.0.0"]
redis = [
    "redis>=5.0.0",
    "aiocache[redis]>=0.12.3",
]
logging = ["structlog>=23.1.0"]
metrics = ["prometheus-client>=0.17.0"]
production = [
    "aioboto3>=12.0.0",
    "redis>=5.0.0",
    "aiocache[redis]>=0.12.3",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
]

[dependency-groups]
dev = ["ruff>=0.14.9"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.5.0",
    "coverage[toml]>=7.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
default-groups = ["dev", "test"]

[tool.setuptools.packages]
find = { where = ["."], include = ["app*", "files*", "alembic*"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --cov=app --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (database, file system)",
    "security: Security-focused tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # bugbear
    "S", # bandit (security)
    "SIM", # simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"/*" = ["B008"]